--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ disqus_shortname:   taylantatli
 facebook:           tatsuya.izumori
 github-url:         izmr
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:           tatsuya-izumori-87843035
 #xing:              username
 #instagram:          username
 #lastfm:            username
