add bio, modify home layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              izmr
-bio:                ''
+bio:                'Web Application Engineer / Product Manager'
 description:        ''
 reading_time:       true
 words_per_minute:   200
